# cmake_study

cprj/: CMakeLists.txt  build.sh  main.cpp
cprj/MathFunctions/: CMakeLists.txt  myfunctions.cpp  myfunctions.h
